<resources>
    <string-array name="tipos_de_documento">
        <item>Cédula</item>
        <item>Tarjeta de Identidad</item>
        <item>Pasaporte</item>
    </string-array>
    <string name="app_name">TheRetosVirtuales</string>
    <string name="has_olvidado_tu_contrasena">¿Has olvidado tu contraseña?</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="iniciar_sesion_con_google">Iniciar sesión con Google.</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="contrasena">Contraseña</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enviar_nueva_contrasena">Enviar nueva contraseña</string>
    <string name="numero_de_documento">Número de documento</string>
    <string name="nombre_y_apellido_del_participante">Nombre y apellido del participante</string>
    <string name="correo_electronico_del_participante">Correo electrónico del participante</string>
    <string name="n_mero_de_celular">Número de celular</string>
    <string name="fecha_de_nacimiento_del_participante">Fecha de nacimiento del participante</string>
    <string name="autorizo_el_envio_de_publicidad_por_los_diferentes_medios">Autorizo el envío de publicidad por los diferentes medios.</string>
    <string name="certifico_que_el_origen_de_mis_fondos_provienen_de_acciones_legales_acorde_con_la_ley">Certifico que el origen de mis fondos provienen de acciones legales acorde con la ley.</string>
    <string name="estoy_de_acuerdo_con_la_politica_de_tratamiento_de_datos">Estoy de acuerdo con la política de tratamiento de datos.</string>
    <string name="ya_estas_registrado">¿Ya estas registrado?</string>
    <string name="tipo_de_documento">Tipo de documento</string>
    <string name="crear_una_cuenta">Crear una Cuenta</string>
    <string name="the_retos_instagram_url">Crear una Cuenta</string>
</resources>